--- a/project-manager.html
+++ b/project-manager.html
@@ -226,6 +226,11 @@
 <p><span class="badge badge-light">Lisbon, Portugal</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
+<h5><a href='https://talent-appen.icims.com/jobs/4781/senior-project-manager/job'>Senior Project Manager in Chatswood, New South Wales | Careers ...</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Jul 11, 2019 ... Appen brings over 20 years of experience capturing and enriching a wide variety 
+of data types including speech, text, image and video. With deep expertise in?...</p>
+<hr/>
 <h5><a href='https://jobs.smartrecruiters.com/PublicisGroupe/743999692234969-project-manager-m-w-d-'>Publicis Groupe Project Manager (m/w/d) | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
@@ -291,7 +296,7 @@ new program management office to support the NIH. On our team, you'll monitor?..
 <p><span class="badge badge-light">Portland, Oregon</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/welocalize/9f98440a-7826-4978-b412-decc623485f1'>Welocalize - Program Manager</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/welocalize/9f98440a-7826-4978-b412-decc623485f1'>Welocalize - Program Manager</a></h5> 
 <p><span class="badge badge-light">Tokyo, Japan</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -307,7 +312,7 @@ new program management office to support the NIH. On our team, you'll monitor?..
 <p><span class="badge badge-light">Kyiv, Ukraine</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/BIC/743999692221298-it-senior-project-manager-supply-chain'>BIC IT Senior Project Manager ? Supply Chain | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/BIC/743999692221298-it-senior-project-manager-supply-chain'>BIC IT Senior Project Manager ? Supply Chain | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">France</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -333,7 +338,7 @@ new program management office to support the NIH. On our team, you'll monitor?..
 <p><span class="badge badge-light">Lisbon, Portugal</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<h5><a href='https://definedcrowd.recruitee.com/o/italian-linguistics-project-manager'>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://definedcrowd.recruitee.com/o/italian-linguistics-project-manager'>
       Italian Linguistics Project Manager - DefinedCrowd
     </a></h5> 
 <p><span class="badge badge-light">Lisbon, Portugal</span></p>
@@ -345,7 +350,7 @@ new program management office to support the NIH. On our team, you'll monitor?..
 <p><span class="badge badge-light">Lisbon, Portugal</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://definedcrowd.recruitee.com/o/portuguesejapanese-linguistics-project-manager'>
+<h5><a href='https://definedcrowd.recruitee.com/o/portuguesejapanese-linguistics-project-manager'>
       Portuguese/Japanese Linguistics Project Manager - DefinedCrowd
     </a></h5> 
 <p><span class="badge badge-light">Lisbon, Portugal</span></p>
@@ -374,7 +379,7 @@ position at our corporate headquarters in downtown Tulsa, OK. In this position t
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/ring/c83bff5e-a085-4000-b60d-439e6e7ccfde'>Ring Inc. - Technical Program Manager - Data Platform</a></h5> 
+<h5><a href='https://jobs.lever.co/ring/c83bff5e-a085-4000-b60d-439e6e7ccfde'>Ring Inc. - Technical Program Manager - Data Platform</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>2 days ago ... Ring's is looking for an experienced Technical Program Manager to help the 
 Data Engineering teams deliver on highly cross-functional projects to build best 
@@ -384,7 +389,7 @@ in?...</p>
 <p><span class="badge badge-light">Denver</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/betterworks/jobs/1782912'>Job Application for Software Engineering Program Manager at betterworks</a></h5> 
+<h5><a href='https://boards.greenhouse.io/betterworks/jobs/1782912'>Job Application for Software Engineering Program Manager at betterworks</a></h5> 
 <p><span class="badge badge-light">Redwood City, CA</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -428,7 +433,7 @@ in?...</p>
 <p><span class="badge badge-light">Tampa, FL</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://talent-acquisition-concepts.breezy.hr/p/9436800540fa-geotechnical-project-manager'>Geotechnical Project Manager at Talent Acquisition Concepts</a></h5> 
+<h5><a href='https://talent-acquisition-concepts.breezy.hr/p/9436800540fa-geotechnical-project-manager'>Geotechnical Project Manager at Talent Acquisition Concepts</a></h5> 
 <p><span class="badge badge-light">Charlotte, NC</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -499,11 +504,7 @@ motivated, and forward-thinking? At Codetribe you'll have the opportunity to?...
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<h5><a href='https://jobs.jobvite.com/venterra/job/oM0Cafwi'>Venterra Realty Careers - Project Manager, Investor and Corporate Reporting</a></h5> 
-<p><span class="badge badge-light">Canada Richmond Richmond</span></p>
-<p>Posted on: 2019-07-24</p>
-<hr/>
-
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/>
 
 <!--End body here -->
 
